--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a class='more-inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
 </div>
 <div class="main">
-    <p id='adding-element-to-list'>
+    <p id='add-element-to-list'>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
             <input id='new-task' 
