--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <img src="./eisenhower-matrix.jpg">
     <a class='more-inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
 </div>
-<div class="main">
-    <p id='add-element-to-list'>
+<main class="main">
+    <div id='add-element-to-list'>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
             <input id='new-task' 
@@ -17,7 +17,7 @@
                 type="text">
             <button>Add</button>
         </div>
-    </p>
+    </div>
 <h3>Todo</h3>
 <ul id='incomplete-tasks'>
     <li>
@@ -53,7 +53,7 @@
         </button>
     </li>
 </ul>
-</div>
+</main>
 <script SRC="app.js"></script>
 </body>
 </html>
