--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </HEAD>
 <body>
 <div class="more">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower-matrix picture">
     <a class='more-inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
 </div>
 <main class="main">
@@ -26,7 +26,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove icon">
         </button>
     </li>
     <li class="edit-mode">
@@ -37,7 +37,7 @@
             class="task">
         <button class='edit'>Save</button>
         <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove icon">
         </button>
     </li>
 </ul>
@@ -49,7 +49,7 @@
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove icon">
         </button>
     </li>
 </ul>
