--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
 </HEAD>
 <body>
-<div class="more">
+<header class="more">
     <img src="./eisenhower-matrix.jpg" alt="Eisenhower-matrix picture">
     <a class='more-inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
-</div>
+</header>
 <main class="main">
     <div id='add-element-to-list'>
         <label for="new-task">Add Item</label>
