--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a class='more-inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
 </header>
 <main class="main">
-    <div id='add-element-to-list'>
+    <section id='add-element-to-list'>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
             <input id='new-task' 
@@ -17,42 +17,46 @@
                 type="text">
             <button>Add</button>
         </div>
-    </div>
-<h3>Todo</h3>
-<ul id='incomplete-tasks'>
-    <li>
-        <input type='checkbox'>
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-            <img src="./remove.svg" alt="Remove icon">
-        </button>
-    </li>
-    <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" 
-            value="Go Shopping" 
-            class="task">
-        <button class='edit'>Save</button>
-        <button class="delete">
-            <img src="./remove.svg" alt="Remove icon">
-        </button>
-    </li>
-</ul>
-<h3>Completed</h3>
-<ul id="completed-tasks">
-    <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-            <img src="./remove.svg" alt="Remove icon">
-        </button>
-    </li>
-</ul>
+    </section>
+    <section>
+        <h3>Todo</h3>
+        <ul id='incomplete-tasks'>
+            <li>
+                <input type='checkbox'>
+                <label class="task">Pay Bills</label>
+                <input type="text" class="task">
+                <button class="edit">Edit</button>
+                <button class="delete">
+                    <img src="./remove.svg" alt="Remove icon">
+                </button>
+            </li>
+            <li class="edit-mode">
+                <input type="checkbox">
+                <label class="task">Go Shopping</label>
+                <input type="text" 
+                    value="Go Shopping" 
+                    class="task">
+                <button class='edit'>Save</button>
+                <button class="delete">
+                    <img src="./remove.svg" alt="Remove icon">
+                </button>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h3>Completed</h3>
+        <ul id="completed-tasks">
+            <li>
+                <input type="checkbox" checked>
+                <label class="task">See the Doctor</label>
+                <input type="text" class="task">
+                <button class="edit">Edit</button>
+                <button class="delete">
+                    <img src="./remove.svg" alt="Remove icon">
+                </button>
+            </li>
+        </ul>
+    </section>
 </main>
 <script SRC="app.js"></script>
 </body>
