--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <HEAD><title>Todo App</title>
-<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
 </HEAD>
 <body>
 <header class="more">
     <img src="./eisenhower-matrix.jpg" alt="Eisenhower-matrix picture">
-    <a class='more-inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
 </header>
 <main class="main">
     <section class="section section-add">
@@ -18,9 +18,9 @@
     </section>
     <section class="section section-todo">
         <h3 class="section-title title-todo">Todo</h3>
-        <ul class='incomplete-tasks'>
+        <ul class="incomplete-tasks">
             <li class="task-item">
-                <input type='checkbox'>
+                <input type="checkbox">
                 <label class="task-title">Pay Bills</label>
                 <input type="text" class="section-todo__input input-text">
                 <button class="button button-edit">Edit</button>
@@ -34,7 +34,7 @@
                 <input type="text" 
                     value="Go Shopping" 
                     class="section-todo__input input-text">
-                <button class='button button-edit'>Save</button>
+                <button class="button button-edit">Save</button>
                 <button class="button button-delete">
                     <img class="button-delete-img" src="./remove.svg" alt="Remove icon">
                 </button>
