refactor:fix double quotes according to rule 1.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <header class="more">
     <img src="./eisenhower-matrix.jpg" alt="Eisenhower-matrix picture">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 </header>
 <main class="main">
     <section class="section section-add">
